--- a/04-functions.tex
+++ b/04-functions.tex
@@ -333,23 +333,15 @@ def print_lyrics():
 \afterverb
 %
 {\tt def}는 이것이 함수 정의를 나타내는 키워드입니다. 함수명은 \verb"print_lyrics"입니다.
-함수명을 명명 규칙은 변수명과 동일합니다. 문자, 숫자, 그리고 몇몇 
-
-{\tt def} is a keyword that indicates that this is a function
-definition.  The name of the function is \verb"print_lyrics".  The
-rules for function names are the same as for variable names: letters,
-numbers and some punctuation marks are legal, but the first character
-can't be a number.  You can't use a keyword as the name of a function,
-and you should avoid having a variable and a function with the same
-name.
+함수명을 명명 규칙은 변수명과 동일합니다. 문자, 숫자, 그리고 몇몇 문장 부호는 사용할 수 있지만,
+첫 문자가 숫자는 될 수 없다. 함수명으로 예약어 키워드를 사용할 수도 없고, 동일한 변수명과 함수명은 피하는 것이 좋다.
 
 \index{def keyword}
 \index{keyword!def}
 \index{argument}
 
-The empty parentheses after the name indicate that this function
-doesn't take any arguments.   Later we will build functions that 
-take arguments as their inputs.
+함수명 뒤에 빈 괄호는 이 함수가 어떠한 인수도 갖지 않는다는 것을 나타낸다.
+나중에, 입력값으로 인수를 가지는 함수를 작성해 볼 것이다.
 
 \index{parentheses!empty}
 \index{header}
@@ -357,22 +349,16 @@ take arguments as their inputs.
 \index{indentation}
 \index{colon}
 
-The first line of the function definition is called the {\bf header};
-the rest is called the {\bf body}.  The header has to end with a colon
-and the body has to be indented.  By convention, the indentation is
-always four spaces.  The body can contain
-any number of statements.
+함수 정의 첫번째 줄을 {\bf 머리 부문(헤더, header)}, 나머지 부문을 {\bf 몸통 부문(바디, body)}라고 부른다.
+머리 부문은 콜론(:)으로 끝나고, 몸통 부문은 들여쓰기를 해야 한다.
+파이썬 관례로 들여쓰기는 항상 4칸의 공백이다. 몸통 부문은 제약 없이 명령문을 작성할 수 있다.
 
-The strings in the print statements are enclosed in double
-quotes.  Single quotes and double quotes do the same thing;
-most people use single quotes except in cases like this where
-a single quote (which is also an apostrophe) appears in the string.
+print문의 문자열은 이중 인용부호로 감싸진다. 단일 인용부호나, 이중 인용부호나 차이가 없다.
+대부분의 경우 단일 인용부호를 사용하고, 단일 인용부호가 문자열에 나타나는 경우, 이중 인용부호를 사용하여 단일 인용부호가 출력되게 감싼다.
 
 \index{ellipses}
 
-If you type a function definition in interactive mode, the interpreter
-prints ellipses (\emph{...}) to let you know that the definition
-isn't complete:
+함수 정의를 인터렉티브 모드에서 타이핑을 한다면, 함수 정의가 끝나지 않았다는 것을 알 수 있도록 생략부호(...)를 출력한다.
 
 \beforeverb
 \begin{verbatim}
@@ -383,10 +369,10 @@ isn't complete:
 \end{verbatim}
 \afterverb
 %
-To end the function, you have to enter an empty line (this is
-not necessary in a script).
 
-Defining a function creates a variable with the same name.
+함수 정의를 끝내기 위해서는 엔터(Enter)키를 눌러 빈 줄을 삽입한다. (스크립트에서는 반듯이 필요한 것은 아니다.) 
+
+함수를 정의하게 되면 동일한 이름의 변수도 생성된다.
 
 \beforeverb
 \begin{verbatim}
@@ -397,14 +383,12 @@ Defining a function creates a variable with the same name.
 \end{verbatim}
 \afterverb
 %
-The value of \verb"print_lyrics" is a {\bf function object}, which
-has type \verb"'function'".
+
+\verb"print_lyrics"의 값은 \verb"'function'" 형을 가지는 {\bf 함수 개체(function object)}이다. 
 
 \index{function object}
 \index{object!function}
-
-The syntax for calling the new function is the same as
-for built-in functions:
+신규 함수를 호출하는 구문은 내장 함수의 경우와 동일합니다.
 
 \beforeverb
 \begin{verbatim}
@@ -414,9 +398,9 @@ I sleep all night and I work all day.
 \end{verbatim}
 \afterverb
 %
-Once you have defined a function, you can use it inside another
-function.  For example, to repeat the previous refrain, we could write
-a function called \verb"repeat_lyrics":
+
+함수를 정의하면, 또 다른 함수 내부에서 사용이 가능합니다.
+예를 들어, 이전의 후렴구를 반복하기 위해 \verb"repeat_lyrics" 함수를 작성할 수 있습니다.
 
 \beforeverb
 \begin{verbatim}
@@ -426,7 +410,8 @@ def repeat_lyrics():
 \end{verbatim}
 \afterverb
 %
-And then call \verb"repeat_lyrics":
+
+그리고 나서, \verb"repeat_lyrics" 함수를 호출합니다.
 
 \beforeverb
 \begin{verbatim}
@@ -438,14 +423,13 @@ I sleep all night and I work all day.
 \end{verbatim}
 \afterverb
 %
-But that's not really how the song goes.
 
+하지만, 이 방법이 실제 노래가 불려지는 방법은 아닙니다.
 
-\section{Definitions and uses}
+\section{함수 정의와 사용법}
 \index{function definition}
 
-Pulling together the code fragments from the previous section, the
-whole program looks like this:
+앞 절의 코드 조각을 모아서 작성한 전체 프로그램은 다음과 같다.
 
 \beforeverb
 \begin{verbatim}
@@ -461,82 +445,59 @@ repeat_lyrics()
 \end{verbatim}
 \afterverb
 %
-This program contains two function definitions: \verb"print_lyrics" and
-\verb"repeat_lyrics".  Function definitions get executed just like other
-statements, but the effect is to create function objects.  The statements
-inside the function do not get executed until the function is called, and
-the function definition generates no output.
+
+상기 프로그램은 두개의 함수(\verb"print_lyrics", \verb"repeat_lyrics")를 담고 있다.
+함수정의는 다른 명령문과 동일하게 수행되지만, 함수 개체를 생성한다는 점에서 차이가 있다.
+함수 내부의 명령문은 함수가 호출되기 전까지 수행되지 않고, 함수 정의는 출력값도 생성하지 않는다.
 
 \index{use before def}
 
-As you might expect, you have to create a function before you can
-execute it.  In other words, the function definition has to be
-executed before the first time it is called.
+예상하듯이, 함수를 실행하기 전에 함수를 생성해야 한다. 다시 말해서, 처음으로 호출되기 전에
+함수 정의가 실행되어야 한다.
 
 \begin{ex}
-Move the last line of this program
-to the top, so the function call appears before the definitions. Run 
-the program and see what error
-message you get.
+상기 프로그램의 마지막 줄을 최상단으로 옮겨서 함수 정의 전에 호출되도록 프로그램을 고쳐보세요.
+프로그램을 실행서 오류 메시지를 확인하세요.
 \end{ex}
 
 \begin{ex}
-Move the function call back to the bottom
-and move the definition of \verb"print_lyrics" after the definition of
-\verb"repeat_lyrics".  What happens when you run this program?
+함수 호출을 맨 마지막으로 옮기고, \verb"repeat_lyrics" 함수 정의 뒤에 \verb"print_lyrics" 함수를 옮기세요.
+프로그램을 실행하게 되면 무슨 일이 발생하나요?
 \end{ex}
 
 
-\section{Flow of execution}
+\section{실행 흐름}
 \index{flow of execution}
 
-In order to ensure that a function is defined before its first use,
-you have to know the order in which statements are executed, which is
-called the {\bf flow of execution}.
+함수가 첫 사용전에 정의되는 것을 확인하기 위해서, 명령문의 실행 순서를 파악해야 하는데 이를 {\bf 실행 흐름(flow of execution)}이라고 한다.
 
-Execution always begins at the first statement of the program.
-Statements are executed one at a time, in order from top to bottom.
+프로그램 실행은 항상 프로그램의 첫 명령문부터 시작한다. 명령문은 한번에 하나씩 위에서 아래로 실행된다.
 
-Function \emph{definitions} do not alter the flow of execution of the
-program, but remember that statements inside the function are not
-executed until the function is called.
+함수 \emph{정의(definitions)}가 프로그램의 실행 순서를 바꾸지는 않는다. 하지만, 함수 내부의 명령문은 함수가 호출될 때까지 실행이 되지 않는 것을 기억합니다. 
 
-A function call is like a detour in the flow of execution. Instead of
-going to the next statement, the flow jumps to the body of
-the function, executes all the statements there, and then comes back
-to pick up where it left off.
+함수 호출은 프로그램의 실행 흐름을 우회하는 것과 같습니다. 다음 실행 명령문으로 가기 전에 실행 흐름은 함수의 몸통 부문으로 건너 뛰어 실행하고는 다시 건너 뛰기를 
+시작한 지점으로 다시 돌아온다.
 
-That sounds simple enough, until you remember that one function can
-call another.  While in the middle of one function, the program might
-have to execute the statements in another function. But while
-executing that new function, the program might have to execute yet
-another function!
+하나의 함수가 또 다른 함수를 호출한다는 것을 기억할 때까지는 매우 간단하게 들립니다.
+함수 중간에서 프로그램이 또다른 함수의 명령문을 수행할지도 모릅니다. 하지만, 새로운 함수가 실행되는 중간에 프로그램이 또 다른 함수를 실행할지도 모릅니다!
+ 
+다행스럽게도, 파이썬은 프로그램의 실행 위치를 정확히 추적합니다. 그래서, 함수가 실행을 완료할 때 마다, 프로그램이 함수를 호출해서 떠난 지점으로 정확히 되돌려 놓습니다. 프로그램의 마지막에 도달했을 때, 프로그램은 종료합니다.
 
-Fortunately, Python is good at keeping track of where it is, so each
-time a function completes, the program picks up where it left off in
-the function that called it.  When it gets to the end of the program,
-it terminates.
-
-What's the moral of this sordid tale?  When you read a program, you
-don't always want to read from top to bottom.  Sometimes it makes
-more sense if you follow the flow of execution.
+조금 복잡한 이야기의 교훈은 무엇일까요? 프로그램을 읽을 때, 위에서부터 아래로 읽을 필요는 없습니다. 때때로, 실행 흐름을 따르는 것이 좀더 이치에 맞습니다.
 
 
-\section{Parameters and arguments}
+\section{매개 변수(parameter)와 인수(argument)}
 \label{parameters}
 \index{parameter}
 \index{function parameter}
 \index{argument}
 \index{function argument}
 
-Some of the built-in functions we have seen require arguments.  For
-example, when you call {\tt math.sin} you pass a number
-as an argument.  Some functions take more than one argument:
-{\tt math.pow} takes two, the base and the exponent.
+지금까지 살펴본 몇몇 내장 함수는 인수를 요구합니다. 예를 들어, {\tt math.sin} 함수를 호출할 때, 숫자를 인수로 넘겨야 합니다.
+어떤 함수는 2개 이상의 인수를 받습니다. {\tt math.pow} 는 밑과 지수 2개의 인수가 필요합니다. 
 
-Inside the function, the arguments are assigned to
-variables called {\bf parameters}.  Here is an example of a
-user-defined function that takes an argument:
+인수는 함수 내부에서  {\bf 매개 변수(parameters)}로 불리는 변수로 할당됩니다.
+하나의 인수를 받는 사용자 정의 함수가 예제로 있습니다.  
 
 \index{parentheses!parameters in}
 
@@ -548,11 +509,10 @@ def print_twice(bruce):
 \end{verbatim}
 \afterverb
 %
-This function assigns the argument to a parameter
-named {\tt bruce}.  When the function is called, it prints the value of
-the parameter (whatever it is) twice.
 
-This function works with any value that can be printed.
+사용자 정의 함수는 인수를 받아 {\tt bruce} 매개변수에 할당한다. 함수가 호출될 때, 매개변수의 값(무엇이든지 관계 없이)을 두번 출력합니다.
+
+사용자 정의 함수는 출력가능한 임의의 값에 작동합니다.
 
 \beforeverb
 \begin{verbatim}
@@ -568,9 +528,8 @@ Spam
 \end{verbatim}
 \afterverb
 %
-The same rules of composition that apply to built-in functions also
-apply to user-defined functions, so we can use any kind of expression
-as an argument for \verb"print_twice":
+
+내장함수에 적용되는 동일한 조합 규칙이 사용자 정의 함수에도 적용되어서, \verb"print_twice" 함수의 인수로 어떤 종류의 표현식도 가능합니다. 
 
 \index{composition}
 
@@ -585,13 +544,12 @@ Spam Spam Spam Spam
 \end{verbatim}
 \afterverb
 %
-The argument is evaluated before the function is called, so
-in the examples the expressions \verb"'Spam '*4" and
-{\tt math.cos(math.pi)} are only evaluated once.
+
+인수는 함수가 호출되기 전에 평가가 완료되어서, 예제에서 \verb"'Spam '*4"과 {\tt math.cos(math.pi)}은 단지 1회만 평가가 됩니다.
 
 \index{argument}
 
-You can also use a variable as an argument:
+인수로 변수도 사용이 가능합니다.
 
 \beforeverb
 \begin{verbatim}
@@ -602,27 +560,21 @@ Eric, the half a bee.
 \end{verbatim}
 \afterverb
 %
-The name of the variable we pass as an argument ({\tt michael}) has
-nothing to do with the name of the parameter ({\tt bruce}).  It
-doesn't matter what the value was called back home (in the caller);
-here in \verb"print_twice", we call everybody {\tt bruce}.
 
-\section{Fruitful functions and void functions}
+인수로 넘기는 변수명({\tt michael})은 매개 변수명({\tt bruce})과 아무런 연관이 없다.
+무슨 값이 호출된든 호출하는 측에서는 상관이 없다. 여기 \verb"print_twice" 함수에서 누구나 {\tt bruce}라고 부른다. 
+
+\section{열매 함수(fruitful function)와 빈 함수(void function)}
 
 \index{fruitful function}
 \index{void function}
 \index{function, fruitful}
 \index{function, void} 
 
-Some of the functions we are using, such as the math functions, yield
-results; for lack of a better name, I call them {\bf fruitful
-  functions}.  Other functions, like \verb"print_twice", perform an
-action but don't return a value.  They are called {\bf void
-  functions}.
+수학 함수와 같은 몇몇 함수는 결과를 만들어 낸다. 좀더 좋은 이름이 없어서, 결과를 만들어 내는 함수를 {\bf 열매함수(fruitful functions)}라고 명명한다.
+\verb"print_twice"와 같은 명령을 수행하지만, 결과를 만들어 내지 않는 함수를 {\bf 빈 함수(void functions)}라고 부른다.
 
-When you call a fruitful function, you almost always
-want to do something with the result; for example, you might
-assign it to a variable or use it as part of an expression:
+열매 함수를 호출할 때는 결과 값을 가지고 뭔가를 하려고 한다. 예를 들어, 결과값을 변수에 할당하거나, 표현식의 일부로 재사용할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -631,8 +583,7 @@ golden = (math.sqrt(5) + 1) / 2
 \end{verbatim}
 \afterverb
 %
-When you call a function in interactive mode, Python displays
-the result:
+인터랙티브 모드에서 함수를 호출할 때, 파이썬은 결과를 화면에 출력한다.
 
 \beforeverb
 \begin{verbatim}
@@ -641,9 +592,7 @@ the result:
 \end{verbatim}
 \afterverb
 %
-But in a script, if you call a fruitful function and do 
-not store the result of the function in a variable,
-the return value vanishes into the mist!
+하지만, 스크립트에서 열매함수를 호출하고 변수에 결과값을 저장하지 않으면 반환되는 결과값은 안개속에 사라져간다!
 
 \beforeverb
 \begin{verbatim}
@@ -651,16 +600,13 @@ math.sqrt(5)
 \end{verbatim}
 \afterverb
 %
-This script computes the square root of 5, but since it doesn't store
-the result in a variable or display the result, it is not very useful.
+이 스크립트는 제곱근 5의 값을 연산하지만, 변수에 결과값을 저장하거나, 화면에 출력하지 않아서 그 다지 유용하지는 않다.
 
 \index{interactive mode}
 \index{script mode}
 
-Void functions might display something on the screen or have some
-other effect, but they don't have a return value.  If you try to
-assign the result to a variable, you get a special value called
-{\tt None}.
+빈 함수(Void functions)는 화면에 뭔가 출력하거나 뭔가 다른 효과를 가지지만, 반환값은 없다.
+빈 함수를 사용하여 결과에 변수를 할당하면, {\tt None}으로 불리는 특별한 값을 얻게 된다.
 
 \index{None special value}
 \index{special value!None}
@@ -675,8 +621,8 @@ None
 \end{verbatim}
 \afterverb
 %
-The value {\tt None} is not the same as the string \verb"'None'". 
-It is a special value that has its own type:
+
+{\tt None} 값은 자신만의 특별한 값을 가지며, 문자열 \verb"'None'" 과는 같지 않다. 
 
 \beforeverb
 \begin{verbatim}
@@ -685,10 +631,9 @@ It is a special value that has its own type:
 \end{verbatim}
 \afterverb
 %
-To return a result from a function, we use the {\tt return} statement 
-in our function.  For example, we could make a very 
-simple function called {\tt addtwo}
-that adds two numbers together and return a result.
+
+함수에서 결과를 반환하기 위해서, 함수내부에 {\tt return}문을 사용한다.
+예를 들어, 두 숫자를 더해서 결과를 반환하는 {\tt addtwo}라는 간단한 함수를 작성할 수 있다. 
 
 \beforeverb
 \begin{verbatim}
@@ -701,49 +646,32 @@ print x
 \end{verbatim}
 \afterverb
 %
-When this script executes, the {\tt print} statement will print out ``8''
-because the {\tt addtwo} function was called with 3 and 5 as arguments.
-Within the function the parameters {\tt a} and {\tt b} were 3 and 5 
-respectively. The function computed the sum of the two numbers and placed
-it in the local function variable named {\tt added} 
-and used the {\tt return} statement 
-to send the computed value back to the calling code 
-as the function result which was assigned
-to the variable {\tt x} and printed out.
 
+상기 스크립트가 실행될 때 print 문은 ``8''을 출력한다. 왜냐하면, 3과 5를 인수로 받는 {\tt addtwo} 함수가 호출되기 때문이다.
+함수 내부에 매개 변수 {\tt a}, {\tt b}는 각각 3, 5이다.
+ {\tt addtwo} 함수는 두 숫자의 덧셈을 수행하고  {\tt added}라는 로컬 변수에 저장하고, {\tt return}문을 사용해서 덧셈 결과를 반환하고,
+  {\tt x} 라는 변수에 할당하여 출력한다.
 
-\section{Why functions?}
+\section{왜 함수를 사용하는가?}
 \index{function, reasons for}
 
-It may not be clear why it is worth the trouble to divide
-a program into functions.  There are several reasons:
+프로그램을 함수로 나누는 고생을 할 가치가 왜 있는지 불명확할지 모릅니다. 여기 몇 가지 이유가 있습니다.
 
 \begin{itemize}
 
-\item Creating a new function gives you an opportunity to name a group
-of statements, which makes your program easier to read, understand 
-and debug.
+\item 명령문을 그룹으로 만들어 새로운 함수로 명명하는 것은 프로그램을 읽고, 이해하고, 디버그하기 좋게 합니다. 
 
-\item Functions can make a program smaller by eliminating repetitive
-code.  Later, if you make a change, you only have
-to make it in one place.
+\item 함수는 반복 코드를 제거해서 프로그램을 작고 콤팩트하게 만듭니다. 후에 프로그램에 수정사항이 생기면, 단지 한 곳에서만 수정을 하면 됩니다.
 
-\item Dividing a long program into functions allows you to debug the
-parts one at a time and then assemble them into a working whole.
+\item 긴 프로그램을 함수로 나누어 작성하는 것은 작은 부분에서 버그를 수정할 수 있게 하고 이를 조합해서 전체 온전한 프로그램을 만들 수 있습니다.
 
-\item Well-designed functions are often useful for many programs.
-Once you write and debug one, you can reuse it.
+\item 잘 설계된 함수는 종종 많은 프로그램에 유용하게 사용됩니다. 잘 설계된 프로그램을 작성하고 디버그를 해서 오류가 없이 만들게 되면, 나중에 재사용이 용이합니다.
 
 \end{itemize}
 
-Throughout the rest of the book, often we will use a function definition to 
-explain a concept.  Part of the skill of creating and using functions is
-to have a function properly capture an idea such as ``find the smallest
-value in a list of values''.  Later we will show you code that finds
-the smallest in a list of values and we will present it to you as a function
-named {\tt min} which takes a list of values as its argument and 
-returns the smallest value in the list.
-
+책의 나머지 부분에서 이 개념을 설명하는 함수 정의를 종종 사용할 것입니다. 함수를 만들고 사용하는 기술의 일부는 "리스트에서 가장 작은 값을 찾아내는 것"과 같은 
+생각을 적절하게 추상화하여 함수를 작성하는 것입니다. 나중에, 리스트에서 가장 작은 값을 찾아내는 코드를 보여 줄 것입니다. 리스트를 인수로 받아 가장 작은 값을 
+반환하는 {\tt min} 함수를 작성해서 여러분에게 보여드릴 것입니다.
 
 \section{Debugging}
 \label{editor}
