--- a/05-iterations.tex
+++ b/05-iterations.tex
@@ -1,7 +1,7 @@
 % LaTeX source for ``Python for Informatics: Exploring Information''
 % Copyright (c)  2010-  Charles R. Severance, All Rights Reserved
 
-\chapter{Iteration}
+\chapter{반복(Iteration)}
 \index{iteration}
 
 \section{Updating variables}
