Initial Chapter 07 Draft

--- a/08-lists.tex
+++ b/08-lists.tex
@@ -1,13 +1,13 @@
 % LaTeX source for ``Python for Informatics: Exploring Information''
 % Copyright (c)  2010-  Charles R. Severance, All Rights Reserved
 
-\chapter{Lists}
+\chapter{리스트}
 
 \index{list}
 \index{type!list}
 
 
-\section{A list is a sequence}
+\section{리스틑 열이다.}
 
 Like a string, a {\bf list} is a sequence of values.  In a string, the
 values are characters; in a list, they can be any type.  The values in
