--- a/07-files.tex
+++ b/07-files.tex
@@ -7,7 +7,7 @@
 \index{type!file}
 
 
-\section{Persistence}
+\section{영속성(Persistence)}
 
 \index{persistence}
 \index{secondary memory}
@@ -92,25 +92,17 @@ Details: http://source.sakaiproject.org/viewsvn/?view=rev\&rev=39772
 \end{alltt}
 \afterverb
 상호 의사소통한 전자우편 전체 파일은  \url{www.py4inf.com/code/mbox.txt} 에서 가능하고, 간략한 버젼의 파일은 \url{www.py4inf.com/code/mbox.txt}에서 얻을 수 있다.
+이들 파일은 여러개의 전자우편 메시지를 담고 있는 파일로 표준 표맷으로 되어 있다.
+"From "으로 시작하는 라인은 메시지 본문을 구별하고 "From: "으로 시작하는 줄은 본문 메시지의 일부다.
+더 자세한 정보는 \url{en.wikipedia.org/wiki/Mbox}에서 찾을 수 있다.
 
-
-These files are in a standard format for a file containing 
-multiple mail messages. The lines which start with 
-``From '' separate the messages and the lines which start 
-with ``From:'' are part of the messages. 
-For more information, see 
-\url{en.wikipedia.org/wiki/Mbox}. 
-
-To break the file into lines, there is a special character that 
-represents the ``end of the line'' called the {\bf newline} character.
+파일을 라인으로 쪼개기 위해서, {\bf 새줄(newline)} 문자로 불리는 "줄의 끝(end of the line)"을 표시하는 특수 문자가 있다.
 
 \index{newline}
-In Python, we represent the {\bf newline} character as a backslash-n in 
-string constants.  Even though this looks like two characters, it
-is actually a single character.  When we look at the variable by entering
-``stuff'' in the interpreter, it shows us the \verb"\n" in the string, 
-but when we use {\tt print} to show the string, we see the string broken
-into two lines by the newline character.
+
+파이썬에서, 문자열 상수 역슬래쉬-n(\verb"\n")으로 {\bf 새줄(newline)} 문자를 표현한다.
+두 문자처럼 보이지만, 사실은 단일 문자다. 인터프리터에 ''stuff''을 입력한 변수를 보면, 문자열에 \verb"\n"가 있다.
+하지만, {\tt print}문을 사용하여 문자열을 출력하면, 문자열이 새줄 문자에 의해서 두줄로 나누어지는 것을 볼 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -130,12 +122,9 @@ Y
 \afterverb
 %
 
-You can also see that the length of the string \verb"'X\nY'" is \emph{three}
-characters because the newline character is a single character.
+문자열 \verb"'X\nY'"의 길이는 \emph{3} 문자다. 왜냐하면 새줄(newline) 문자는 한 문자이기 때문이다.
 
-So when we look at the lines in a file, we need to \emph{imagine}
-that there is a special invisible character at the end of each line
-that marks the end of the line called the newline.  
+그래서, 파일의 라인을 볼 때, 라인의 끝을 표시하는 새줄(newline)로 불리는 눈에 보이지 않는 특수 문자가 각 줄의 끝에 있다고 상상할 필요가 있다.
 
 % \beforeverb
 % \begin{alltt}
@@ -150,16 +139,16 @@ that marks the end of the line called the newline.
 % \end{alltt}
 % \afterverb
 
-So the newline character separates the characters 
-in the file into lines.
+그래서, 새줄(newline) 문자는 파일의 문자를 라인으로 분리한다.
 
-\section{Reading files}
+
+\section{파일 읽어오기}
 
 \index{file!reading}
 \index{counter}
-While the {\bf file handle} does not contain the data for the file,
-it is quite easy to construct a {\tt for} loop to read through 
-and count each of the lines in a file:
+
+{\bf 파일 핸들러(file handle)}가 파일의 자료를 담고 있지 않지만, 파일의 각 라인을 읽고 라인수를 세기 위해서 
+{\tt for} 루프를 사용하여 쉽게 구축할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -174,34 +163,19 @@ Line Count: 132045
 \end{verbatim}
 \afterverb
 %
-We can use the file handle as the sequence in our {\tt for} loop.  
-Our {\tt for} loop simply counts the number of lines in the 
-file and prints them out.  The rough translation of the {\tt for}
-loop into English is, ``for each line in the file represented by the file
-handle, add one to the {\tt count} variable.''
 
-The reason that the {\tt open} function does not read the entire file
-is that the file might be quite large with many gigabytes of data.
-The {\tt open} statement takes the same amount of time regardless of the
-size of the file.  The {\tt for} loop actually causes the data to be 
-read from the file.
+파일 핸들을 {\tt for}문 열에 사용할 수 있다. {\tt for}문 단순하게 파일의 라인 수를 세고 총 라인수를 출력한다.
+{\tt for}문을 대략 일반어로 풀어 말하면, "파일 핸들로 표현되는 파일의 각 라인마다, {\tt count}변수에 1을 다하세요"
 
-When the file is read using a {\tt for} loop in this manner, Python
-takes care of splitting the data in the file into separate lines using
-the newline character.  Python reads each line through 
-the newline and includes
-the newline as the last character in the {\tt line} variable for each 
-iteration of the {\tt for} loop.
+{\tt open} 함수가 전체 파일을 바로 읽지 않는 이유는 파일이 수 기가 바이트 파일 크기를 가질 수도 있기 때문이다.
+{\tt open} 문은 파일 크기에 관계없이 파일을 여는데 동일한 시간이 걸린다. {\tt for}문이 파일로부터 자료를 읽어오는 역할을 한다.
 
-Because the for loop reads the data one line at a time, it can efficiently
-read and count the lines in very large files without running 
-out of main memory to store the data.  The above program can 
-count the lines in any size file using very little memory since 
-each line is read, counted, and then discarded.
+파일을 이 같은 방식의 {\tt for}문을 사용해서 읽어올 때, 파이썬은 새줄(newline)문자를 사용해서 파일의 자료를 라인으로 쪼갠다.
+파이썬은 새줄(newline)문자 구분되는 각 라인 단위로 읽어어고, {\tt for} 루프가 매번 반복할 때마다 마지막 문자로 새줄(newline)을 {\tt line} 변수에 추가한다.
 
-If you know the file is relatively small compared to the size of 
-your main memory, you can read the whole file into one string
-using the {\tt read} method on the file handle.
+{\tt for} 문은 데이터를 한번에 한줄씩 읽어오기 때문에 데이터를 저장하기 위해서 주기억장치의 저장공간 부족없이 매우 큰 파일을 효과적으로 읽어서 라인을 셀 수 있다.
+
+만약 주기억장치의 크기에 비해서 상대적으로 작은 크기의 파일이라는 것을 안다면, 전체 파일을 파일 핸들로 {\tt read} 메쏘드를 사용해서 하나의 문자열로 읽을 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -214,36 +188,25 @@ From stephen.marquar
 \end{verbatim}
 \afterverb
 %
-In this example, the entire contents (all 94,626 characters) 
-of the file {\tt mbox-short.txt} are read directly into the 
-variable {\tt inp}.  We use string slicing to print out the first
-20 characters of the string data stored in {\tt inp}.
 
-When the file is read in this manner, all the characters including 
-all of the lines and newline characters are one big string 
-in the variable {\bf inp}.  
-Remember that this form of the {\tt open} function should only be used
-if the file data will fit comfortably in the main memory 
-of your computer.
+이 예제에서,{\tt mbox-short.txt} 전체 파일 내용(94,626 문자)이 변수 {\tt inp}에 바로 읽혀졌다.
+{\tt inp}에 저장된 문자열 자료의 첫 20 문자를 출력하기 위해서 문자열 쪼개기를 사용했다.
 
-If the file is too large to fit in main memory, you should write
-your program to read the file in chunks using a {\tt for} or {\tt while}
-loop.
+파일이 이런 방식으로 읽혀질 때, 모든 라인과 새줄(newline)문자를 포함한 모든 문자는 변수 {\tt inp}에 할당된 큰 문자열이다.
+파일 데이터가 컴퓨터의 주기억장치에 안정적으로 감당해 낼 수 있다면, 이런 형식의 {\tt open} 함수가 사용될 수 있다는 것을 기억하라.
 
-\section{Searching through a file}
+주기억장치가 감당해 낼 수 없는 매우 큰 크기의 파일이라면, {\tt for}나 {\tt while} 루프를 사용해서 파일을 쪼개서 읽는 프로그램을 작성해야 한다.
 
-When you are searching through data in a file, it
-is a very common pattern to read through a file, ignoring most
-of the lines and only processing lines which meet a particular criteria.
-We can combine the pattern for reading a file with string {\bf methods}
-to build simple search mechanisms.
+\section{파일을 통한 검색}
+
+파일의 데이터를 검색할 때, 파일을 읽고, 대부분의 줄은 넘어가고, 특정한 조건을 만족하는 라인만 처리하는 것이 흔한 패턴이다. 
+간단한 검색 메카니즘을 구현하기 위해서 파일을 읽어 들이는 패턴과 {\bf 문자열(methods)}를 조합하여 사용한다.
 
 \index{filter pattern}
 \index{pattern!filter}
-For example, if we wanted to read a file and only print out lines
-which started with the prefix ``From:'', we could use the 
-string method {\bf startswith} to select only those lines with
-the desired prefix:
+
+예를 들어, 파일을 읽고, ``From:''으로 시작하는 라인만 출력하고자 한다면, 원한는 접두사로 시작하는 라인만을 선택하기 위해서 
+{\bf startswith} 문자열 메쏘드를 사용한다.
 
 \beforeverb
 \begin{verbatim}
@@ -254,7 +217,8 @@ for line in fhand:
 \end{verbatim}
 \afterverb
 %
-When this program runs, we get the following output:
+
+이 프로그램이 실행될 때, 다음 출력값을 얻는다.
 
 \beforeverb
 \begin{verbatim}
@@ -269,17 +233,14 @@ From: rjlowe@iupui.edu
 \end{verbatim}
 \afterverb
 %
-The output looks great since the only lines we are seeing are those 
-which start with ``From:'', but why are we seeing the extra blank
-lines?  This is due to that invisible {\bf newline} character.
-Each of the lines ends with a newline, so the {\tt print} 
-statement prints the string in the variable {\bf line} which includes
-a newline and then {\tt print} adds \emph{another} newline, resulting
-in the double spacing effect we see.
 
-We could use line slicing to print all but the last character, but 
-a simpler approach is to use the {\bf rstrip} method which strips
-whitespace from the right side of a string as follows:
+''From:''으로만 시작하는 라인만 출력하기 때문에 출력값은 훌륭해 보인다.
+하지만, 추가적으로 왜 빈 라인이 보이는 걸까? 왜냐하면 눈에 보이지 않는 {\bf 새줄(newline)} 문자 때문이다.
+각 라인이 새줄(newline)으로 끝나서 {\tt print}문은 새줄(newline)을 포함하는 변수 {\bf line}의 문자열을 출력한다.
+그리고 나서 {\bf print}문이 추가로 새줄(newline)을 추가해서 결국 우리가 보기에는 두 줄 효과가 나타난다.
+
+마지막 문자를 제외한 라인을 출력하기 위해서 라인 쪼개기(slicing)를 할수 있지만, 좀더 간단한 접근법은 다음과 같이 문자열 오른쪽 끝에서부터 공백을 벗겨내는 
+{\bf rstrip 메쏘드}를 사용하는 것인다.
 
 \beforeverb
 \begin{verbatim}
@@ -291,7 +252,8 @@ for line in fhand:
 \end{verbatim}
 \afterverb
 %
-When this program runs, we get the following output:
+
+프로그램을 실행하면, 다음 출력값을 얻는다.
 
 \beforeverb
 \begin{verbatim}
@@ -306,14 +268,12 @@ From: cwen@iupui.edu
 \end{verbatim}
 \afterverb
 %
-As your file processing programs get more complicated, you may want 
-to structure your search loops using {\tt continue}.  The basic idea 
-of the search loop is that you are looking for ``interesting'' lines
-and effectively skipping ``uninteresting'' lines.  And then when we
-find an interesting line, we do something with that line.
 
-We can structure the loop to follow the
-pattern of skipping uninteresting lines as follows:
+파일 처리 프로그램이 점점 더 복잡해짐에 따라 검색 루프(search loop)를 {\tt continue}를 사용해서 구조화할 필요가 있다.
+검색 루프의 기본 생각은 ''흥미로운'' 라인을 집중적으로 찾고, ''흥미롭지 않은'' 라인은 효과적으로 건너뛰는 것이다.
+그리고 나서 흥미로운 라인을 찾게되면, 그 라인에서 무슨 연산을 수행하는 것이다.
+
+흥미롭지 않은 라인은 건떠 뛰는 패턴을 따르는 루프를 다음과 같이 구성할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -328,19 +288,13 @@ for line in fhand:
 \end{verbatim}
 \afterverb
 %
-The output of the program is the same.  In English, the 
-uninteresting lines are those which do not start 
-with ``From:'', which we skip using {\tt continue}.
-For the ``interesting'' lines (i.e. those that start with ``From:'')
-we perform the processing on those lines.
 
-We can use the {\tt find} string method to simulate a text editor
-search which finds lines where the search string is anywhere in the line.  
-Since {\tt find} looks for an occurrence of a string within another
-string and either returns the position of the string or -1 if the string
-was not found, we can write the following loop to show lines which
-contain the string ``@uct.ac.za'' (i.e. they come from the University 
-of Cape Town in South Africa):
+프로그램의 출력값은 동일하다. 흥미롭지 않는 라인은 ''From:''으로 시작하는 라인이어서 {\tt continue}문을 사용해서 건너뛴다.
+''흥미로운'' 라인 (즉, ''From:''으로 시작하는 라인)에 대해서는 연산처리를 수행한다. 
+
+{\tt find} 문자열 메쏘드를 사용해서 검색문자열이 어는 라인에 있는지를 찾아주는 텍스트 편집기의 검색기능을 흉내낼 수 있다.
+{\tt find} 메쏘드는 다른 문자열 내부에 찾는 문자열이 있는지 찾고, 문자열의 위치를 반환하거나, 만약 문자열이 없다면 -1을 반환하기 때문에,
+``@uct.ac.za''(남아프리카 케이프 타운 대학으로부터 왔다) 문자열을 포함하는 라인을 보이기 위해 다음과 같이 루프를 작성한다.
 
 \beforeverb
 \begin{verbatim}
@@ -353,7 +307,7 @@ for line in fhand:
 \end{verbatim}
 \afterverb
 %
-Which produces the following output:
+출력결과는 다음과 같다.
 
 \beforeverb
 \begin{verbatim}
@@ -370,16 +324,12 @@ Author: david.horwitz@uct.ac.za
 \afterverb
 %
 
-\section{Letting the user choose the file name}
+\section{사용자가 파일명을 고르게 만들기}
 
-We really do not want to have to edit our Python code
-every time we want to process a different file.  It would 
-be more usable to ask the user to enter the file name string 
-each time the program runs so they can use our 
-program on different files without changing the Python code.
+다른 파일을 처리할 때마다 파이썬 코드를 편집하기를 원치 않는다. 매번 프로그램이 실행될 때마다, 파일명을 사용자가 입력하도록 요청하는 것이 좀더 유용할 것이다. 
+그래서 파이썬 코드를 바꾸지 않고, 다른 파일에 대해서도 동일한 프로그램을 사용할 수 있다.
 
-This is quite simple to do by reading the file name from
-the user using \verb"raw_input" as follows:
+아래와 같이 \verb"raw_input"을 사용해서 사용자로부터 파일명을 읽어서 수행하는 것이 간단하다.
 
 \beforeverb
 \begin{verbatim}
@@ -393,9 +343,8 @@ print 'There were', count, 'subject lines in', fname
 \end{verbatim}
 \afterverb
 %
-We read the file name from the user and place it in a variable
-named {\tt fname} and open that file.  Now we can run the program 
-repeatedly on different files.
+
+사용자로부터 파일명을 일고 변수명으로 {\tt fname}에 저장하고, 그 파일을 연다. 이제 다른 파일에 대해서 반복적으로 프로그램을 실행할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -409,17 +358,16 @@ There were 27 subject lines in mbox-short.txt
 \end{verbatim}
 \afterverb
 %
-Before peeking at the next section, take a look at the above program
-and ask yourself, ``What could go possibly wrong here?'' or ``What might our
-friendly user do that would cause our nice little program to 
-ungracefully exit with a traceback, making us look not-so-cool 
-in the eyes of our users?''.
 
-\section{Using {\tt try, except,} and {\tt open}}
+다음 절을 엿보기 전에, 상기 프로그램을 살펴보고 자신에게 다음을 질문해 보세요.
+"여기서 어디가 잘못될 수 있는가?" 혹은 "우리의 친절한 사용자가 멋진 작은 프로그램을 트레이스백(traceback)을 남기고 
+바로 끝날 수 있게 만들어 사용자의 눈에는 뭐 좋지 않은 프로그램이라는 인상을 남기기 위해서 무엇을 할 수 있을까?
 
-I told you not to peek.  This is your last chance.
 
-What if our user types something that is not a file name?
+\section{{\tt try, except, open} 사용하기}
+
+제가 여러분에게 엿보지 말라고 말씀드렸습니다. 이번이 마지막 기회입니다.
+우리의 사용자가 파일명이 아닌 뭔가 다른 것을 입력하면 어떻습니까?
 
 \beforeverb
 \begin{verbatim}
@@ -439,19 +387,16 @@ IOError: [Errno 2] No such file or directory: 'na na boo boo'
 \end{verbatim}
 \afterverb
 %
-Do not laugh, users will eventually do every possible thing they can do 
-to break your programs --- either on purpose or with malicious intent.
-As a matter of fact, an important part of any software development
-team is a person or group called {\bf Quality Assurance} (or QA for short)
-whose very job it is to do the craziest things possible in an attempt
-to break the software that the programmer has created.
+
+웃지마시구요, 사용자는 결국 여러분이 작성한 프로그램을 망가뜨리기 위해 고의든 악의를 가지든 가능한 모든 수단을 강구할 것입니다.
+사실, 소프트웨어 개발팀의 중요한 부문은 {\bf 품질 보증(Quality Assurance, QA)}이라는 조직이다. 
+품질보증 조직은 프로그래머가 만든 소프트웨어를 망가뜨리기 위해 가능한 말도 안 되는 것을 합니다.
 
 \index{Quality Assurance}
 \index{QA}
-The QA team is responsible for finding the flaws in programs before 
-we have delivered the program to the end-users who may be purchasing the
-software or paying our salary to write the software.  So the QA team
-is the programmer's best friend.
+
+품질보증 조직은 소프트웨어를 제품으로 구매하거나 작성한 프로그램에 대해 월급을 지급하는 사용자에게 프로그램이 전달되기 전까지 프로그램의 오류를 발견하는 것에 책임이 있다.
+그래서 품질보증 조직은 프로그래머의 최고의 친구다.
 
 \index{try statement}
 \index{statement!try}
@@ -459,10 +404,9 @@ is the programmer's best friend.
 \index{function!open}
 \index{exception!IOError}
 \index{IOError}
-So now that we see the flaw in the program, we can elegantly fix it using
-the {\tt try}/{\tt except} structure.  We need to assume that the {\tt open}
-call might fail and add recovery code when the {\tt open} fails
-as follows:
+
+프로그램의 오류를 찾았기 때문에, {\tt try}/{\tt except} 구조를 사용해서 오류를 우아하게 고쳐봅시다.
+{\tt open} 호출이 잘못될 수 있다고 가정하고, {\tt open} 호출이 실패할 때 다음과 같이 복구 코드를 추가한다.
 
 \beforeverb
 \begin{verbatim}
@@ -481,10 +425,10 @@ print 'There were', count, 'subject lines in', fname
 \end{verbatim}
 \afterverb
 %
-The {\tt exit} function terminates the program.  It is a function
-that we call that never returns.  Now when our user (or 
-QA team) types in silliness or bad file names, 
-we ``catch'' them and recover gracefully:
+
+{\tt exit}함수는 프로그램을 끝낸다. 결코 돌아오지 않는 함수를 호출한 것이다.
+이제 사용자 혹은 품질 보증 조직에서 옳지 않거나 어처구니 없는 파일명을 입력했을 때, 
+``catch''로 잡아서 우아하게 복구한다.
 
 \beforeverb
 \begin{verbatim}
@@ -499,30 +443,22 @@ File cannot be opened: na na boo boo
 \afterverb
 %
 \index{Pythonic}
-Protecting the {\tt open} call is a good example 
-of the proper use of {\tt try}
-and {\tt except} in a Python program.  We use the term
-``Pythonic'' when we are doing something the ``Python
-way''.  We might say that the above example is 
-the Pythonic way to open a file.
 
-Once you become more skilled in Python, you can engage
-in repartee' with other Python programmers to decide
-which of two equivalent solutions to a problem is 
-``more Pythonic''.  The goal to be ``more Pythonic'' 
-captures the notion that programming is part engineering
-and part art.  We are not always interested
-in just making something work, we also want
-our solution to be elegant and to be appreciated as 
-elegant by our peers.
+{\tt open} 호출을 보호하는 것은 파이썬 프로그램을 작성할 때 {\tt try}, {\tt except}의 적절한 사용 예제가 된다.
+파이썬 방식("Python way")으로 무언가를 작성할 때, "파이썬스럽다(Pythonic)"이라는 용어를 사용한다.
+상기 파일을 여는 것은 파이썬스러운 방식의 좋은 예가 된다고 말한다.
 
+파이썬에 좀더 자신감이 붙게되면, 다른 파이썬 프로그래머와 동일한 문제에 대해서 
+두 가지 동치하는 해답을 가지고 어는 것이 좀더 "파이썬스러운지"에 대한 현답을 찾는데 관여하게 된다.
 
-\section{Writing files}
+"좀더 파이썬스럽게" 되는 이유는 프로그램밍이 엔지니어링적인 면과 예술적인 면을 동시에 가지고 있기 때문이다.
+항상 무언가를 단지 작동하는 것에만 관심이 있지 않고, 프로그램으로 작성한 해결책이 좀더 우아하고, 다른 동료에 의해서 우아한 것으로 인정되기를 또한 원합니다.
+
+\section{파일에 쓰기}
 
 \index{file!writing}
 
-To write a file, you have to open it with mode
-\verb"'w'" as a second parameter:
+파일에 쓰기 위해서는 두 번째 매개 변수로 \verb"'w'" 모드로 파일을 열어야 합니다.
 
 \beforeverb
 \begin{verbatim}
@@ -532,12 +468,11 @@ To write a file, you have to open it with mode
 \end{verbatim}
 \afterverb
 %
-If the file already exists, opening it in write mode clears out
-the old data and starts fresh, so be careful!
-If the file doesn't exist, a new one is created.
 
-The {\tt write} method of the file handle object 
-puts data into the file.
+파일이 이미 존재한다면, 쓰기 모드에서 여는 것은 과거 데이터를 모두 지워버리고, 
+파일이 깨끗한 다시 시작되니 주의가 필요합니다. 만약 파일이 존재하지 않는다면, 새로운 파일이 생성됩니다.
+
+파일 핸들 개체의 {\tt write} 메쏘드는 데이터를 파일에 저장합니다.
 
 \beforeverb
 \begin{verbatim}
@@ -547,14 +482,12 @@ puts data into the file.
 \afterverb
 %
 \index{newline}
-Again, the file object keeps track of where it is, so if
-you call {\tt write} again, it adds the new data to the end.
 
-We must make sure to manage the ends of lines as we write
-to the file by explicitly inserting the newline character
-when we want to end a line.  The {\tt print} statement 
-automatically appends a newline, but the {\tt write} 
-method does not add the newline automatically.
+다시, 파일 개체는 어디에 마지막 포인터가 있는지 위치를 추적해서, 만약 {\tt write} 메쏘드를 다시 호출하게 되면, 새로운 데이터를 파일 끝에 추가합니다.
+
+라인을 끝내고 싶을 때 명시적으로 새줄(newline) 문자를 삽입해서 파일에 쓰도록 라인 끝을 관리하도록 꼭 확인해야 합니다.
+
+{\tt print}문은 자동적으로 새줄(newline)을 추가하지만, {\tt write} 메쏘는 자동적으로 새줄(newline)을 추가하지는 않습니다.
 
 \beforeverb
 \begin{verbatim}
@@ -563,9 +496,9 @@ method does not add the newline automatically.
 \end{verbatim}
 \afterverb
 %
-When you are done writing, you have to close the file
-to make sure that the last bit of data is physically written
-to the disk so it will not be lost if the power goes off.
+
+파일에 쓰기가 끝났을 때, 파일을 필히 닫아야 합니다.
+파일을 닫는 것은 데이터의 마지막 비트까지 디스크에 물리적으로 쓰여져서, 전원이 나가더라도 자료가 유실되지 않도록 하는 역할을 합니다.
 
 \beforeverb
 \begin{verbatim}
@@ -573,25 +506,22 @@ to the disk so it will not be lost if the power goes off.
 \end{verbatim}
 \afterverb
 %
-We could close the files which we open for read as well, 
-but we can be a little sloppy if we are only opening a few
-files since Python makes sure that all open files are 
-closed when the program ends.  When we are writing files, 
-we want to explicitly close the files so as to leave nothing
-to chance.
+
+파일 읽기로 연 파일을 닫을 수 있지만, 몇개의 파일을 열어논다면 약간 단정치 못한 것으로 끝날 수 있습니다. 
+왜냐하면 프로그램이 종료될 때 열린 모든 파일을 닫도록 파이썬이 자동으로 확인합니다. 파일에 쓰기를 할 때는,
+파일을 명시적으로 닫아서 다른 일들이 발생할 여지를 없애야 합니다.
 
 \index{close method}
 \index{method!close}
 
 
-\section{Debugging}
+\section{디버깅}
 
 \index{debugging}
 \index{whitespace}
 
-When you are reading and writing files, you might run into problems
-with whitespace.  These errors can be hard to debug because spaces,
-tabs and newlines are normally invisible:
+파일을 읽고 쓸 때, 공백으로 문제에 종종 봉착합니다.
+이런 종류의 오류는 공백, 탭, 새줄(newline)이 눈에 보이지 않기 때문에 디버그하기가 쉽지 않습니다.
 
 \beforeverb
 \begin{verbatim}
@@ -606,10 +536,8 @@ tabs and newlines are normally invisible:
 \index{function!repr}
 \index{string representation}
 
-The built-in function {\tt repr} can help.  It takes any object as an
-argument and returns a string representation of the object.  For
-strings, it represents whitespace
-characters with backslash sequences:
+내장함수 {\tt repr}이 도움이 될 수 있습니다. 인수로 임의의 개체를 잡아 개체의 문자열 표현으로 반환합니다.
+문자열의 공백문자는 역슬래쉬 열로 나타냅니다.
 
 \beforeverb
 \begin{verbatim}
@@ -618,62 +546,54 @@ characters with backslash sequences:
 \end{verbatim}
 \afterverb
 
-This can be helpful for debugging.
+디버깅에 도움이 될 수 있습니다.
 
-One other problem you might run into is that different systems
-use different characters to indicate the end of a line.  Some
-systems use a newline, represented \verb"\n".  Others use
-a return character, represented \verb"\r".  Some use both.
-If you move files between different systems, these inconsistencies
-might cause problems.
+
+여러분이 봉착하는 또 다른 문제는 다른 시스템은 라인의 끝을 표기하기 위해서 다른 문자를 사용합니다.
+어떤 시스템은 \verb"\n"으로 새줄(newline)을 표기하고, 다른 시스템은 \verb"\r"으로 반환 문자(return character)를 사용합니다.
+둘다 사용하는 시스템도 있습니다. 파일을 다른 시스템으로 옮긴다면, 이러한 불일치가 문제를 야기합니다.
+
 
 \index{end of line character}
 
-For most systems, there are applications to convert from one
-format to another.  You can find them (and read more about this
-issue) at \url{wikipedia.org/wiki/Newline}.  Or, of course, you
-could write one yourself.
+대부분의 시스템에는 A 포맷에서 B 포멧으로 변환하는 응용프로그램이 있습니다.
+\url{wikipedia.org/wiki/Newline} 에서 응용프로그램을 찾을 수 있고, 좀더 많은 것을 읽을 수 있다.
+물론, 여러분이 직접 프로그램을 작성할 수도 있다.
 
 % TBD - Doesn't Python take care of this for us????
 
-\section{Glossary}
+\section{용어정의}
 
 \begin{description}
 
-\item[catch:] To prevent an exception from terminating
-a program using the {\tt try}
-and {\tt except} statements.
+\item[잡기(catch):] 
+{\tt try}와 {\tt except} 문을 사용해서 프로그램이 끝나는 예외 상황을 방지하는 것.
 \index{catch}
 
-\item[newline:] A special character used in files and strings to indicate
-the end of a line.
+\item[새줄(newline):] 라인의 끝을 표기 위한 파일이나 문자열에 사용되는 특수 문자.
 \index{newline}
 
-\item[Pythonic:] A technique that works elegantly in Python.
-``Using try and except is the \emph{Pythonic} way to recover from 
-missing files.''.
+\item[파이썬스러운(Pythonic):] 파이썬에서 우아하게 작동하는 기술. ''try와 catch를 사용하는 것은 파일이 없는 경우를 복구하는 파이썬스러운 방식이다.''
+
 \index{Pythonic}
 
-\item[Quality Assurance:] A person or team focused on insuring the 
-overall quality of a software product.  QA is often involved 
-in testing a product and identifying problems before the product 
-is released.
+\item[품질 보증(Quality Assurance, QA):] 
+소프트웨어 제품의 전반적인 품질을 보중하는데 집중하는 사람이나 조직.
+품질 보증은 소프트웨어 제품을 시험하고, 제품이 시장에 출시되기 전에 문제를 확인하는데 관여한다.
 \index{Quality Assurance}
 \index{QA}
 
-\item[text file:] A sequence of characters stored in permanent
-storage like a hard drive.
+\item[텍스트 파일(text file):] 
+하드디스크 같은 영구 저장소에 저장된 일련의 문자 집합.
 \index{text file}
 
 \end{description}
 
-
-\section{Exercises}
+\section{연습문제}
 
 \begin{ex}
-Write a program to read through a file and print the contents 
-of the file (line by line) all in upper case.  Executing the program 
-will look as follows:
+파일을 읽고 한줄씩 파일의 내용을 모두 대문자로 출력하는 프로그램을 작성하세요.
+프로그램을 싱행하면 다음과 같이 보일 것입니다.
 
 \beforeverb
 \begin{verbatim}
@@ -692,9 +612,8 @@ You can download the file from
 \end{ex}
 
 \begin{ex}
-Write a program 
-to prompt for a file name, and then read through the file 
-and look for lines of the form:
+
+파일명을 입력받아, 파일을 일고, 다음 형식의 라인을 찾는 프로그램을 작성하세요.
 
 \beforeverb
 \begin{alltt}
@@ -702,13 +621,8 @@ X-DSPAM-Confidence: {\bf 0.8475}
 \end{alltt}
 \afterverb
 
-When you encounter a line that starts with 
-``X-DSPAM-Confidence:'' pull apart the line to extract the
-floating point number on the line.  Count these 
-lines and the compute the total of the spam confidence 
-values from these lines.
-When you reach the end of the file, print out the average
-spam confidence.
+``X-DSPAM-Confidence:''로 시작하는 라인을 만나게 되면, 부동 소수점 숫자를 뽑아내기 위해 해당 라인을 별도로 보관하세요.
+라인의 수를 세고, 라인으로부터 스팸 신뢰값의 총계를 계산하세요. 파일의 끝에 도달할 했을 때, 평균 스팸 신뢰도를 출력핫에ㅛ.
 
 \beforeverb
 \begin{verbatim}
@@ -720,18 +634,16 @@ Average spam confidence: 0.750718518519
 \end{verbatim}
 \afterverb
 %
-Test your file on the {\tt mbox.txt} and {\tt mbox-short.txt} files.
+{\tt mbox.txt}과 {\tt mbox-short.txt} 파일에 프로그램을 시험하세요.
 \end{ex}
 
 
 \begin{ex}
-Sometimes when programmers get bored or want to have a bit of fun,
-they add a harmless {\bf Easter Egg} to their program 
-(\url{en.wikipedia.org/wiki/Easter_egg_(media)}). Modify the program
-that prompts the user for the file name so that it prints a funny
-message when the user types in the exact file name 'na na boo boo'. 
-The program should behave normally for all other files which exist
-and don't exist.  Here is a sample execution of the program:
+
+때때로, 프로그래머가 지루하거나, 약간의 재미를 목적으로, 프로그램에 무해한 {\bf 부활절 달걀(Easter Egg)}를 넣습니다.
+(\url{en.wikipedia.org/wiki/Easter_egg_(media)})
+사용자가 파일명을 입력하는 프로그램을 변형시켜, 'na na boo boo'로 파일명을 정확하게 입력했을 때, 재미난 메시지를 출려하는 프로그램을 작성하세요.
+파일이 존재하거나, 존재하지 않는 모든 파일에 대해서 정상적으로 작동해야 합니다. 여기 프로그램을 실행한 견본이 있습니다.
 
 \beforeverb
 \begin{verbatim}
@@ -749,8 +661,8 @@ NA NA BOO BOO TO YOU - You have been punk'd!
 \end{verbatim}
 \afterverb
 %
-We are not encouraging you to put Easter Eggs in your programs -
-this is just an exercise.
+
+프로그램에 부활절 달걀을 넣도록 격려하지는 않습니다. 단지 연습입니다.
 
 \end{ex}
 
